# spheroidal_cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  g_grid.h  legendre_otc.cpp  legendre_otc.h  legendre_verification.py  run  test_cont_frac  test_cont_frac.cpp  test_gsl.cpp  test_legendre_otc  test_legendre_otc.cpp
data/: P.csv  P.txt  Q.csv  Q.txt  dP.csv  dP.txt  dQ.csv  dQ.txt
docs/: CMakeLists.txt  convergence_test.tex
examples/: CMakeLists.txt  temp.cpp  test_cont_frac.cpp  test_gsl.cpp  test_legendre_otc.cpp  test_spheroidal_analysis.cpp  verification_plot.py  verification_tests.cpp
include/gsl_wrapper/: core.h  fft.h  utils.hpp
include/spheroidal/: CMakeLists.txt  grid_functions.h  grid_functions.hpp  gsl_utils.h  gsl_utils.hpp  gsl_wrapper.h  legendre_otc.h  legendre_otc.hpp  spheroidal_analysis.h  spheroidal_coordinate_functions.h  spheroidal_double_layer.h  spheroidal_harmonic_transforms.h
include/yawg/: cmatrix.h  complex.h  core.h  cvector.h  fft.h  legendre.h  lls.h  matrix.h  utils.hpp  vector.h
src/: CMakeLists.txt  grid_functions.cpp  grid_functions.h  gsl_utils.cpp  gsl_wrapper.cpp  legendre_otc.cpp  legendre_otc.h  test_cont_frac.cpp  test_gsl.cpp  test_legendre_otc.cpp
src/gsl_wrapper/: cmatrix.cpp  complex.cpp  cvector.cpp  fft.cpp  matrix.cpp  utils.cpp  vector.cpp
src/spheroidal/: grid_functions.cpp  legendre_otc.cpp
src_gsl_wrapper/: CMakeLists.txt  cmatrix.cpp  complex.cpp  cvector.cpp  matrix.cpp  utils.cpp  vector.cpp
src_spheroidal/: CMakeLists.txt  grid_functions.cpp  legendre_otc.cpp  spheroidal_analysis.cpp  spheroidal_coordinate_functions.cpp  spheroidal_double_layer.cpp  spheroidal_harmonic_transforms.cpp
src_yawg/: CMakeLists.txt  cmatrix.cpp  complex.cpp  cvector.cpp  fft.cpp  legendre.cpp  lls.cpp  matrix.cpp  utils.cpp  vector.cpp
tests/: CMakeLists.txt  test_gsl_utils.cpp  test_gsl_wrapper.cpp  test_simple.cpp  test_simple_2.cpp  test_simple_3.cpp
tests/data/: DL_coincident_10.csv  DL_coincident_11.csv  DL_coincident_12.csv  DL_coincident_13.csv  DL_coincident_14.csv  DL_coincident_15.csv  DL_coincident_16.csv  DL_coincident_2.csv  DL_coincident_3.csv  DL_coincident_4.csv  DL_coincident_5.csv  DL_coincident_6.csv  DL_coincident_7.csv  DL_coincident_8.csv  DL_coincident_9.csv  DL_far_10.csv  DL_far_11.csv  DL_far_12.csv  DL_far_13.csv  DL_far_14.csv  DL_far_15.csv  DL_far_16.csv  DL_far_2.csv  DL_far_3.csv  DL_far_4.csv  DL_far_5.csv  DL_far_6.csv  DL_far_7.csv  DL_far_8.csv  DL_far_9.csv  PointChargePotential.csv  Solution_near_10.csv  Solution_near_11.csv  Solution_near_12.csv  Solution_near_13.csv  Solution_near_14.csv  Solution_near_15.csv  Solution_near_16.csv  Solution_near_2.csv  Solution_near_3.csv  (+7 more)
tests/data/spheroidal_std/: DL_far_16_std.csv  Density_near_10.csv  Density_near_11.csv  Density_near_13.csv  Density_near_14.csv  Density_near_9.csv
tests/data/std/: DL_coincident_16_std.csv  DL_far_16_std.csv  Density_near_12.csv  Density_near_15.csv  Density_near_16.csv  Density_near_2.csv  Density_near_3.csv  Density_near_4.csv  Density_near_5.csv  Density_near_6.csv  Density_near_7.csv  Density_near_8.csv  NearCompletionTerms.csv
tests/gsl_wrapper/: test_fft.cpp  test_utils.cpp  test_utils_complex.cpp  test_wrapper.cpp  test_wrapper_complex.cpp  test_wrapper_math.cpp
tests/spheroidal/: verification_tests.cpp
tests/yawg/: test_fft.cpp  test_utils.cpp  test_views.cpp  test_wrapper.cpp  test_wrapper_math.cpp  test_wrapper_view.cpp
