#option(BUILD_DOC "Build documentation" ON)

#set(DOXYGEN_IN ${CMAKE_CURRENT_SOURCE_DIR}/../docs/Doxyfile.in)
#set(DOXYGEN_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)

#configure_file(${DOXYGEN_IN} ${DOXYGEN_OUT} @ONLY)
#message("Doxygen build started")

#add_custom_target( doc_doxygen ALL
#    COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_OUT}
#    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
#    COMMENT "Generating API documentation with Doxygen"
#    VERBATIM )

set(DOXYGEN_EXTRACT_ALL YES)
set(DOXYGEN_BUILTIN_STL_SUPPORT YES)

set( DOXYGEN_USE_MDFILE_AS_MAINPAGE "README.md" )
doxygen_add_docs( docs ${PROJECT_SOURCE_DIR}/include
                       ${PROJECT_SOURCE_DIR}/src
                       ${PROJECT_SOURCE_DIR}/tests
    WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/include/spheroidal" )

# TODO: Make doxygen work lol